# openCV_linux

./: Android.mk  Application.mk  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  test
prebuilt/: Android.mk
src/: Android.mk  AngleDetect.cpp  AngleDetect.h  Bitmap.cpp  Bitmap.h  Calibration.cpp  Calibration.h  CalibrationJNI.cpp  Calibration_img.cpp  TimeUtils.cpp  Utils.cpp  fflog.h
